A* Algorithm without H Score

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ if(UNIX)
 endif(UNIX)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 MESSAGE(STATUS "Executable Output Path : ${EXECUTABLE_OUTPUT_PATH}")
 MESSAGE(STATUS "Library Output Path : ${LIBRARY_OUTPUT_PATH}")
 
